--- a/fmp100.cbp
+++ b/fmp100.cbp
@@ -20,8 +20,8 @@
 					<Add library="C:\Programme\boost\boost_1_48_0\stage\lib\libboost_system-mgw46-mt-s-1_48.a" />
 					<Add library="C:\Programme\boost\boost_1_48_0\stage\lib\libboost_date_time-mgw46-mt-sd-1_48.a" />
 					<Add library="C:\Programme\boost\boost_1_48_0\stage\lib\libboost_program_options-mgw46-mt-sd-1_48.a" />
-					<Add library="..\Programme\boost\boost_1_48_0\stage\lib\libboost_thread-mgw46-mt-1_48.dll.a" />
-					<Add library="..\Programme\boost\boost_1_48_0\stage\lib\libboost_regex-mgw46-1_48.dll.a" />
+					<Add library="C:\Programme\boost\boost_1_48_0\stage\lib\libboost_thread-mgw46-mt-1_48.dll.a" />
+					<Add library="C:\Programme\boost\boost_1_48_0\stage\lib\libboost_regex-mgw46-1_48.dll.a" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -44,8 +44,8 @@
 					<Add library="C:\Programme\boost\boost_1_48_0\stage\lib\libboost_system-mgw46-mt-s-1_48.a" />
 					<Add library="C:\Programme\boost\boost_1_48_0\stage\lib\libboost_date_time-mgw46-mt-sd-1_48.a" />
 					<Add library="C:\Programme\boost\boost_1_48_0\stage\lib\libboost_program_options-mgw46-mt-sd-1_48.a" />
-					<Add library="..\Programme\boost\boost_1_48_0\stage\lib\libboost_thread-mgw46-mt-1_48.dll.a" />
-					<Add library="..\Programme\boost\boost_1_48_0\stage\lib\libboost_regex-mgw46-1_48.dll.a" />
+					<Add library="C:\Programme\boost\boost_1_48_0\stage\lib\libboost_thread-mgw46-mt-1_48.dll.a" />
+					<Add library="C:\Programme\boost\boost_1_48_0\stage\lib\libboost_regex-mgw46-1_48.dll.a" />
 				</Linker>
 			</Target>
 		</Build>
